# apple_to_bitwarden

./: README.md  main.py  pyproject.toml
examples/: apple_example.csv  output.json
